To display time when the application is stopped for GC: -XX:+PrintGCTimeStamps -XX:+PrintGCApplicationStoppedTime